# ChangeLog for net-irc/irssi
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /usr/local/ssd/gentoo-x86/output/net-irc/cvs-repo/gentoo-x86/net-irc/irssi/ChangeLog,v 1.3 2002/06/23 19:59:16 lamer Exp $

irssi-0.8.5 (23 Jun 2002)
	23 Jun 2002; lamer <lamer@gentoo.org>
	Updated to latest version from upstream. Fixes a topic string overflow
	DoS attack. Upgrade now.

  11 Apr 2002; Spider <spider@gentoo.org>
  Update all glib dependencies to use glib-1.2*  in preparation of unmasking the glib-2.0.1 packages


*irssi-0.7.98.4 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.